unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/FS_Membership_Bundle_Item__c.object-meta.xml
<CustomObject>
    <label>Membership Bundle Item</label>
    <nameField>
        <displayFormat>MBI-{000000}</displayFormat>
        <label>Membership Bundle Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Bundle Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>