unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Exempt_From_Count__c.field-meta.xml
<CustomField>
    <fullName>FS_Exempt_From_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt From Count</label>
    <type>Checkbox</type>
</CustomField>