unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Free_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Free_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Item</label>
    <type>Checkbox</type>
</CustomField>