unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Initially_Selected__c.field-meta.xml
<CustomField>
    <fullName>FS_Initially_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initially Selected</label>
    <type>Checkbox</type>
</CustomField>