unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Membership Bundle Items</relationshipLabel>
    <relationshipName>Membership_Bundle_Items</relationshipName>
    <type>Lookup</type>
</CustomField>