unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Membership_Bundle__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Bundle__c</fullName>
    <label>Membership Bundle</label>
    <referenceTo>FS_Membership_Bundle__c</referenceTo>
    <relationshipName>Bundle_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>