unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Optional_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Optional_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if its a optional item.</description>
    <label>Optional Item</label>
    <type>Checkbox</type>
</CustomField>