unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Required_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Required_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the item is required item</description>
    <label>Required Item</label>
    <type>Checkbox</type>
</CustomField>