unpackaged/main/default/objects/FS_Membership_Bundle_Item__c/fields/FS_Section_Community_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Section_Community_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the section community group that the person can join. If there are no item linked to this CG in the Section Dues Item Class or Section Renewal Dues Item class, then this item will not display.</description>
    <inlineHelpText>This is the section community group that the person can join. If there are no item linked to this CG in the Section Dues Item Class or Section Renewal Dues Item class, then this item will not display.</inlineHelpText>
    <label>Section Community Group</label>
    <referenceTo>PagesApi__Community_Group__c</referenceTo>
    <relationshipLabel>Membership Bundle Items</relationshipLabel>
    <relationshipName>Membership_Bundle_Items</relationshipName>
    <type>Lookup</type>
</CustomField>